k8s/security/items/items-egress-cloudinary.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: items-egress-cloudinary
  namespace: restauranty

spec:

  podSelector:

    matchLabels:

      app: items

  policyTypes:

  - Egress

  egress:

  - to:

    - ipBlock:

        cidr: 0.0.0.0/0

    ports:

    - protocol: TCP
      port: 443
