k8s/security/items/items-egress-mongo.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: items-egress-mongo

  namespace: restauranty

spec:

  podSelector:

    matchLabels:

      app: items

  policyTypes:

  - Egress

  egress:

  - to:

    - namespaceSelector:

        matchLabels:

          kubernetes.io/metadata.name: database

      podSelector:

        matchLabels:

          app.kubernetes.io/name: mongodb

    ports:

    - protocol: TCP
      port: 27017
